New in master
=============

Features
--------

* Add ``sections`` filtering in the post list directive
  (Issue #2409)
* Update Bootstrap to v3.3.7

Bugfixes
--------

* Added code documentation to ReadTheDocs (Issue #2124)
* Pass language to docutils so admonitions are translated (Issue #2422)
* Put 2-file post metadata in the same place as the text file when
  specifying a path in ``new_post``, ``new_page`` (Issue #2420)
* Register dependencies in post-list shortcode (Issue #2412)
* Support post-list shortcode better (Issue #2408)
* Fix gallery links in base theme (Issue #2416)
* Respect ``DEPLOY_DRAFTS`` and ``DEPLOY_FUTURE`` in ``github_deploy``
  (Issue #2406)
* Don’t remove ``<!DOCTYPE html>`` if typogrify filters are in use
* Avoid infinite loop if bootstrap3 can't be loaded (Issue #2402)
* Fixed image rotation to update image size correctly (Issue #2418)

New in v7.7.11
==============

Bugfixes
--------

* Brown bag bug in image resizing (ralsina says my fault!)

New in v7.7.10
==============

Features
--------

* New EXIF_WHITELIST option to filter EXIF data (Issue #2323)
* Support ``date`` filtering in the post list directive
  (Issue #1889)
* Support ``doc`` shortcode (equivalent to reST ``doc`` role — part of
  Issue #2170)
* Added Albanian translation by Vango Stavro
* Added ``post-(type)`` class to ``story.tmpl`` (uses the ``type``
  meta field, defaults to ``post-text`` — same behavior as posts)
* New ``compiled`` signal after post is compiled (Issue #2369)

Bugfixes
--------

* Some images were copied ignoring the PRESERVE_EXIF_DATA option
* Warn about possible outdated files after --clean-files (Issue #2017)
* Improved EXIF orientation handling
* Register post list template as a dependency (Issue #2391)
* Fix section color hashing when using Python 2
* Use ``en_US`` dictionary name with pyphen for better compatibility
* Fix graceful degradation if ``pyphen`` lacks dictionaries
* Add horizontal scrollbar to listings (via getnikola/nikola-themes#86)