@@ -60,7 +60,7 @@ class BuildBundles(LateTask):
             'filters': self.site.config['FILTERS'],
             'output_folder': self.site.config['OUTPUT_FOLDER'],
             'cache_folder': self.site.config['CACHE_FOLDER'],
-            'theme_bundles': get_theme_bundles(self.site.THEMES),
+            'theme_bundles': get_theme_bundles(self.site.THEMES, self.site.themes_dirs),
             'themes': self.site.THEMES,
             'files_folders': self.site.config['FILES_FOLDERS'],
             'code_color_scheme': self.site.config['CODE_COLOR_SCHEME'],
@@ -104,6 +104,7 @@ class BuildBundles(LateTask):
                                 fname,
                                 self.site.THEMES,
                                 self.site.config['FILES_FOLDERS'],
+                                themes_dirs=self.site.themes_dirs,
                                 output_dir=kw['output_folder']) or fname == os.path.join('assets', 'css', 'code.css')]
                 # code.css will be generated by us if it does not exist in
                 # FILES_FOLDERS or theme assets.  It is guaranteed that the
@@ -125,12 +126,12 @@ class BuildBundles(LateTask):
                 yield utils.apply_filters(task, kw['filters'])
 
 
-def get_theme_bundles(themes):
+def get_theme_bundles(themes, themes_dirs):
     """Given a theme chain, return the bundle definitions."""
     bundles = {}
     for theme_name in themes:
         bundles_path = os.path.join(
-            utils.get_theme_path(theme_name), 'bundles')
+            utils.get_theme_path(theme_name, themes_dirs), 'bundles')
         if os.path.isfile(bundles_path):
             with open(bundles_path) as fd:
                 for line in fd:
