@@ -71,7 +71,7 @@ class RobotsFile(LateTask):
 
         yield self.group_task()
 
-        if not utils.get_asset_path("robots.txt", [], files_folders=kw["files_folders"], output_dir=False):
+        if not utils.get_asset_path("robots.txt", [], files_folders=kw["files_folders"], themes_dirs=self.site.themes_dirs, output_dir=False):
             yield utils.apply_filters({
                 "basename": self.name,
                 "name": robots_path,
